--- a/Python_Refreshment.ipynb
+++ b/Python_Refreshment.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,12 +51,25 @@
         "id": "2zXYV2-gusM4",
         "outputId": "b09eba87-ef86-4c58-c044-cb3b26108677"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello, FOML students!\n"
+          ]
+        }
+      ],
       "source": [
         "# This is a single-line comment\n",
         "\n",
         "print(\"Hello, FOML students!\")  # Output will be shown below"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -89,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -97,7 +110,16 @@
         "id": "BV7C_KuNvAhS",
         "outputId": "bbb05b3f-a9bd-4b59-98b4-1a1920f7e50e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "5 3.14 Data Science True\n",
+            "<class 'int'> <class 'float'> <class 'str'> <class 'bool'>\n"
+          ]
+        }
+      ],
       "source": [
         "# Integer\n",
         "a = 5\n",
@@ -2080,7 +2102,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
